--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,74 +1,138 @@
-﻿# CMakeList.txt : CMake project for MrBoboGraphicsEngine, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
-set (CMAKE_CXX_STANDARD 20)
-project ("MrBoboGraphicsEngine")
-
-
-# TODO: Add tests and install targets if needed.
-
-#Variablar
-set(MBL ${CMAKE_SOURCE_DIR}/../MBUtility/)
-set(EXTLIB ${CMAKE_SOURCE_DIR}/../MBExternalDependencies/)
-set(EXTLIB_OUTDIR ${CMAKE_SOURCE_DIR}/ExternalOuts)
-if(WIN32)
-	set(EXTLIB_OUTDIR ${EXTLIB_OUTDIR}/Windows)
-elseif(UNIX AND NOT APPLE)
-	set(EXTLIB_OUTDIR ${EXTLIB_OUTDIR}/Linux)
-endif()
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set(EXTLIB_OUTDIR ${EXTLIB_OUTDIR}/Debug)
-else()
-	set(EXTLIB_OUTDIR ${EXTLIB_OUTDIR}/Release)
-endif()
-#---------------------------------------------------
-
-#Saker för att kunna linka med glfw
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-add_subdirectory(${EXTLIB}/glfw ${EXTLIB_OUTDIR}/glfw_out)
-#för att builda med assimp
-set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE) 
-set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE) 
-add_subdirectory(${EXTLIB}/assimp-5.0.1 ${EXTLIB_OUTDIR}/assimp_out)
-#---------------------------------------------------
-
-#HeaderFiles
-set(EXTHEADER_FILES
-	${EXTLIB}/gl3w/include/GL/gl3w.h
+project(MBGraphicsEngine)
+set(PROJECT_NAME "MBGraphicsEngine")
+##BEGIN MBPM_VARIABLES
+set(MBPM_DEPENDENCIES 
+	MBUtility
 )
-set(HEADER_FILES 
-	${MBL}/MBMatrix.h
-	${CMAKE_SOURCE_DIR}
-	${EXTHEADER_FILES}
-	${EXTLIB}/stb/stb_image.h
-)
-#---------------------------------------------------
+set(MBPM_TARGET_EXTPACKET_LIBRARIES )
+set(MBPM_TARGET_COMPILE_OPTIONS )
+set(MBPM_TARGET_LINK_OPTIONS )
+#MBPM_Functions#variables MBPM_DEPENDENCIES
+#MBPM_TARGET_EXTPACKET_LIBRARIES
+#MBPM_TARGET_COMPILE_OPTIONS
+#MBPM_TARGET_LINK_OPTIONS
+#Environment variables MBPM_PACKETS_INSTALL_DIRECTORY
+set(MBPM_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+set(MBPM_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
+set(MBPM_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
+macro(MBPM_UpdateLibraries TargetToUpdate LinkType BuildType)
+	set(MBPM_TARGET_EXTPACKET_LIBRARIES "")
+	foreach(PACKET IN LISTS MBPM_DEPENDENCIES)
+		set(NewLibraryName "")
+		set(NewLibraryToAdd "$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/${PACKET}/MBPM_Builds/")
+		if(${LinkType} STREQUAL "STATIC")
+			set(NewLibraryName "${PACKET}_S")
+		elseif(${LinkType} STREQUAL "DYNAMIC")
+			set(NewLibraryName "${PACKET}_D")
+		endif()
+		if(${BuildType} STREQUAL "DEBUG")
+			set(NewLibraryName "${NewLibraryName}D")
+		elseif(${BuildType} STREQUAL "RELEASE")
+			set(NewLibraryName "${NewLibraryName}R")
+		endif()
+		if(UNIX)
+			set(NewLibraryName "lib${NewLibraryName}.")
+			if(${LinkType} STREQUAL "STATIC")
+				set(NewLibraryName "${NewLibraryName}a")
+			else()
+				set(NewLibraryName "${NewLibraryName}so")
+			endif()
+		else()
+			if(${LinkType} STREQUAL "STATIC")
+				set(NewLibraryName "${NewLibraryName}.lib")
+			else()
+				set(NewLibraryName "${NewLibraryName}.dll")				
+			endif()
+		endif()
+		set(NewLibraryToAdd "${NewLibraryToAdd}${NewLibraryName}")
+		list(APPEND MBPM_TARGET_EXTPACKET_LIBRARIES ${NewLibraryToAdd})
+	endforeach()
+endmacro()
 
-#HeaderFiles
-set(EXTSOURCE_FILES
-	${EXTLIB}/gl3w/src/gl3w.c	
-	${EXTLIB}/stb/stb_image.cpp
-)
-set(SRC_FILES 
-	${EXTSOURCE_FILES}
-)
-#---------------------------------------------------
+macro(MBPM_UpdateTargetVariables TargetToUpdate LinkType BuildType)
+	MBPM_UpdateLibraries(${TargetToUpdate} ${LinkType} ${BuildType})
+endmacro()
 
-# Add source to this project's executable.
-add_executable (MrBoboGraphicsEngine "MrBoboGraphicsEngine.cpp" "MrBoboGraphicsEngine.h" "MBGE.h" "MBGE.cpp" ${HEADER_FILES} ${SRC_FILES})
-#---------------------------------------------------
+macro(MBPM_UpdateOutput TargetToUpdate)
+	set_target_properties(${TargetToUpdate} 
+	PROPERTIES 
+	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/MBPM_Builds/"
+	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/MBPM_Builds/"
+	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/MBPM_Builds/"
+	)
+	#set_target_properties(${TargetToUpdate} PROPERTIES PREFIX "")
+	#set_target_properties(${TargetToUpdate} PROPERTIES SUFFIX "")
+	set_target_properties(${TargetToUpdate} PROPERTIES OUTPUT_NAME ${TargetToUpdate})
+endmacro()
 
-#Include Directorys
-set (INCLUDE_DIRS
-	${EXTLIB}/gl3w/include/
-	${EXTLIB}/assimp-5.0.1/include/assimp
+macro(MBPM_SetTargetCompileOptions TargetToUpdate LinkType BuildType)
+	set(CMAKE_CXX_FLAGS " ")
+	#set(NEW_TARGET_COMPILE_OPTIONS "")
+	if(${BuildType} STREQUAL "DEBUG" AND ${LinkType} STREQUAL "STATIC")
+		set(NEW_TARGET_COMPILE_OPTIONS "${MBPM_CXX_FLAGS} ${MBPM_CXX_FLAGS_DEBUG}")
+		set(CMAKE_CXX_FLAGS_DEBUG " ")
+	else()
+		set(NEW_TARGET_COMPILE_OPTIONS "${MBPM_CXX_FLAGS} ${MBPM_CXX_FLAGS_RELEASE}")
+		set(CMAKE_CXX_FLAGS_RELEASE " ")
+	endif()
+	string(REPLACE " " ";" NEW_TARGET_COMPILE_OPTIONS_LIST ${NEW_TARGET_COMPILE_OPTIONS})
+	target_compile_options(${TargetToUpdate} PRIVATE ${NEW_TARGET_COMPILE_OPTIONS_LIST})
+	message(${TargetToUpdate} " Compiled with follwing flags: ""${NEW_TARGET_COMPILE_OPTIONS_LIST}")
+endmacro()
+
+macro(MBPM_LinkTargetPacketLibraries Target)
+	target_link_libraries(${Target} ${MBPM_TARGET_EXTPACKET_LIBRARIES})
+endmacro()
+
+macro(MBPM_SetTargetIncludeDirectories Target)
+	target_include_directories(${Target} PUBLIC 
+	"${CMAKE_CURRENT_SOURCE_DIR}/"
+	"$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/"
+	"$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/MBUtility/"
+	)
+endmacro()
+
+macro(MBPM_ApplyTargetConfiguration TargetToUpdate LinkType BuildType)
+	MBPM_UpdateTargetVariables(${TargetToUpdate} ${LinkType} ${BuildType})
+	MBPM_UpdateOutput(${TargetToUpdate})
+	MBPM_SetTargetCompileOptions(${TargetToUpdate} ${LinkType} ${BuildType})
+	MBPM_SetTargetIncludeDirectories(${TargetToUpdate})
+endmacro()
+##END MBPM_VARIABLES
+set(PROJECT_SOURCES 
+	"${CMAKE_CURRENT_SOURCE_DIR}//MBGE.cpp"
+	#"${CMAKE_CURRENT_SOURCE_DIR}//MrBoboGraphicsEngine.cpp"
 )
-target_include_directories(MrBoboGraphicsEngine PRIVATE ${MBL} ${CMAKE_SOURCE_DIR} ${EXTLIB} ${INCLUDE_DIRS})
-#---------------------------------------------------
-#Link grejer
-#glfw
-target_link_libraries(MrBoboGraphicsEngine glfw)
-target_link_libraries(MrBoboGraphicsEngine assimp)
+set(PROJECT_HEADERS 
+	"${CMAKE_CURRENT_SOURCE_DIR}//MBGE.h"
+	#"${CMAKE_CURRENT_SOURCE_DIR}//MrBoboGraphicsEngine.h"
+)
+set(EXECUTABLE_FILES
+	"${CMAKE_CURRENT_SOURCE_DIR}//MrBoboGraphicsEngine.h"	
+	"${CMAKE_CURRENT_SOURCE_DIR}//MrBoboGraphicsEngine.cpp"
+
+)
+set(COMMON_FILES ${PROJECT_SOURCES} ${PROJECT_HEADERS})
+set(COMMON_DYNAMIC_LIBRARIES 
+)
+set(COMMON_STATIC_LIBRARIES 
+)
+set(COMMON_LIBRARIES ${COMMON_STATIC_LIBRARIES} ${COMMON_DYNAMIC_LIBRARIES})
+
+add_library(MBGraphicsEngine_SD STATIC ${COMMON_FILES})
+MBPM_ApplyTargetConfiguration("MBGraphicsEngine_SD" "STATIC" "DEBUG")
+target_compile_features("MBGraphicsEngine_SD" PRIVATE cxx_std_17)
+target_link_libraries("MBGraphicsEngine_SD" ${COMMON_LIBRARIES})
+target_include_directories("MBGraphicsEngine_SD" PRIVATE "$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/assimp/include/")
+
+add_library(MBGraphicsEngine_SR STATIC ${COMMON_FILES})
+MBPM_ApplyTargetConfiguration("MBGraphicsEngine_SR" "STATIC" "RELEASE")
+target_compile_features("MBGraphicsEngine_SR" PRIVATE cxx_std_17)
+target_link_libraries("MBGraphicsEngine_SR" ${COMMON_LIBRARIES})
+target_include_directories("MBGraphicsEngine_SR" PRIVATE "$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/assimp/include/")
+
+add_library(MBGETest STATIC ${COMMON_FILES} ${EXECUTABLE_FILES})
+MBPM_ApplyTargetConfiguration("MBGETest" "STATIC" "RELEASE")
+target_compile_features("MBGETest" PRIVATE cxx_std_17)
+target_link_libraries("MBGETest" ${COMMON_LIBRARIES})
+target_include_directories("MBGETest" PRIVATE "$ENV{MBPM_PACKETS_INSTALL_DIRECTORY}/assimp/include/")
